# tinja

./: README.md
include/: tinja.hpp
test/: CMakeLists.txt
test/data/: circuco_basic.html  circuco_inja.html  circuco_mustache.html  circuco_tinja.html
test/source/: benchmark.cpp  bustache_model.hpp  bustache_nlohmann_model.hpp  test.cpp  util.hpp
